feat: add Elastic License v2.0
Replace MIT license with Elastic License v2.0 across the project.

Changes:
- Add LICENSE file with complete ELv2 text
- Update Cargo.toml with license field
- Update README.md with license information
- Add licensing section to CONTRIBUTING.md
- Add copyright headers to main source files

ELv2 allows use, modification, and distribution while protecting
against SaaS competitors using the software to compete directly.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "dbmazz"
 version = "0.1.0"
 edition = "2021"
+license = "Elastic-2.0"
 
 [dependencies]
 # Fork de Materialize con soporte completo para replicación lógica
