--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,9 @@ jobs:
           targets: x86_64-unknown-linux-musl
 
       - name: Install protoc and musl tools
-        run: sudo apt-get update && sudo apt-get install -y protobuf-compiler musl-tools
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y protobuf-compiler musl-tools pkg-config libssl-dev
 
       - name: Cache cargo registry
         uses: actions/cache@v4
@@ -38,6 +40,9 @@ jobs:
           key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Build dbmazz
+        env:
+          OPENSSL_STATIC: "1"
+          OPENSSL_DIR: /usr
         run: cargo build --release --target x86_64-unknown-linux-musl --verbose
 
       - name: Get version
